22.03 исправление поиска по автору+ убрал циклическую зависимость с секьюрити