@@ -1,19 +1,19 @@
 package ru.testproj.book.backend.service.impl;
 
+import com.sun.xml.bind.v2.runtime.reflect.Lister;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.lang3.ObjectUtils;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
-import org.webjars.NotFoundException;
-import ru.testproj.book.backend.api.dto.PagebleResponse;
-import ru.testproj.book.backend.mapper.AuthorMapper;
 import org.springframework.stereotype.Service;
+import org.webjars.NotFoundException;
 import ru.testproj.book.backend.api.dto.BookDto;
+import ru.testproj.book.backend.api.dto.PagebleResponse;
 import ru.testproj.book.backend.entity.Author;
-import ru.testproj.book.backend.entity.Publisher;
 import ru.testproj.book.backend.entity.Book;
+import ru.testproj.book.backend.entity.Publisher;
+import ru.testproj.book.backend.mapper.AuthorMapper;
 import ru.testproj.book.backend.mapper.BookMapper;
 import ru.testproj.book.backend.mapper.PublisherMapper;
 import ru.testproj.book.backend.repository.AuthorRepository;
@@ -22,7 +22,6 @@ import ru.testproj.book.backend.repository.PublisherRepository;
 import ru.testproj.book.backend.service.BookService;
 
 import java.util.List;
-import java.util.Objects;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
@@ -66,7 +65,7 @@ public class BookServiceImpl implements BookService {
     public List<BookDto> getBookTitle(String title) {
         return bookRepository.findBookByTitleContainsIgnoreCase(title).stream()
                 .map(bookMapper::bookEntityToBookDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 
@@ -81,7 +80,7 @@ public class BookServiceImpl implements BookService {
         String titleBook = bookDto.getTitle();
         Book book = bookRepository.getBook(titleBook, city, title, author);
 //                проверка автора, если есть подсунуть с БД, иначе новый
-        Author newAuthor = authorRepository.findAuthorByNameContainsIgnoreCase(author)
+        Author newAuthor = (Author) authorRepository.findAuthorByNameContainsIgnoreCase(author)
                 .orElse(authorMapper.authorDtoToAuthorEntity(bookDto.getAuthor()));
 //        проверка издательства, если есть подсунуть с БД, иначе новый
         Publisher newPublisher = publisherRepository.findPublisherByTitleContainsIgnoreCaseAndCityContainsIgnoreCase(title, city)
@@ -101,11 +100,18 @@ public class BookServiceImpl implements BookService {
     //          поиск книги по автору
     @Override
     public List<BookDto> getBookAuthor(String author) {
-        Author author1 = authorRepository.findAuthorByNameContainsIgnoreCase(author)
-                .orElseThrow(() -> new NotFoundException("Автора нет"));
-        return author1.getBook().stream()
-                .map(bookMapper::bookEntityToBookDto)
-                .collect(Collectors.toList());
-    }
+        try {
+            Author author1 = (Author) authorRepository.findAuthorByNameContainsIgnoreCase(author).orElseThrow(() -> new NotFoundException("Автора нет"));
+            return author1.getBook().stream()
+                    .map(bookMapper::bookEntityToBookDto)
+                    .toList();
+        } catch (NullPointerException | NotFoundException e) {
+            log.info("Автор " + author + " не найден");
+            return new Lister.Pack<>(BookDto.class);
 
+
+        }
+
+
+    }
 }
