@@ -1,9 +1,7 @@
 package ru.testproj.book.backend.service.impl;
 
-import lombok.RequiredArgsConstructor;
+import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.context.annotation.Lazy;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
@@ -11,46 +9,48 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import ru.testproj.book.backend.api.dto.RegistrationUserDto;
+import ru.testproj.book.backend.entity.Customer;
 import ru.testproj.book.backend.entity.User;
-import ru.testproj.book.backend.repository.RoleRepository;
+import ru.testproj.book.backend.repository.CustomerRepository;
 import ru.testproj.book.backend.repository.UserRepository;
-import ru.testproj.book.backend.service.impl.RoleService;
 
 import javax.transaction.Transactional;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
-
+@AllArgsConstructor
 public class UserService implements UserDetailsService {
     private UserRepository userRepository;
     private RoleService roleService;
+    private CustomerRepository customerRepository;
+
     private PasswordEncoder passwordEncoder;
 
-
-
-    @Autowired
-    public void setUserRepository(UserRepository userRepository) {
-        this.userRepository = userRepository;
-    }
-
-    @Autowired
-    public void setRoleService(RoleService roleService) {
-        this.roleService = roleService;
-    }
-
-    @Autowired
-    public void setPasswordEncoder(PasswordEncoder passwordEncoder) {
-        this.passwordEncoder = passwordEncoder;
-    }
-
+//    private final RoleRepository roleRepository;
+//
+//    @Autowired
+//    public void setUserRepository(UserRepository userRepository) {
+//        this.userRepository = userRepository;
+//    }
+//
+//    @Autowired
+//    public void setRoleService(RoleService roleService) {
+//        this.roleService = roleService;
+//    }
+//
+//    @Autowired
+//    public void setPasswordEncoder(PasswordEncoder passwordEncoder) {
+//        this.passwordEncoder = (PasswordEncoder) passwordEncoder;
+//    }
+//
 
     public Optional<User> findByUsername(String username) {
         return userRepository.findByUsername(username);
     }
 
+//поиск полььзователя
     @Override
     @Transactional
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
@@ -60,17 +60,30 @@ public class UserService implements UserDetailsService {
         return new org.springframework.security.core.userdetails.User(
                 user.getUsername(),
                 user.getPassword(),
-                user.getRoles().stream().map(role -> new SimpleGrantedAuthority(role.getName())).collect(Collectors.toList())
-        );
+                user.getRoles().stream().map(role -> new SimpleGrantedAuthority(role.getName())).toList());
     }
-
+   //создание юзера
+    @Transactional
     public User createNewUser(RegistrationUserDto registrationUserDto) {
         User user = new User();
         user.setUsername(registrationUserDto.getUsername());
         user.setEmail(registrationUserDto.getEmail());
         user.setPassword(passwordEncoder.encode(registrationUserDto.getPassword()));
         user.setRoles(List.of(roleService.getUserRole()));
-        return userRepository.save(user);
+        User registeredUser = userRepository.save(user);
+
+
+        log.info("регистрация пользователя: {} успешна", registeredUser);
+        return registeredUser;
+    }
+    //сохранить в БД db_book_customer как покупателя
+    @Transactional
+    public Customer createNewCustomer(RegistrationUserDto registrationUserDto) {
+        Customer customer = new Customer();
+        customer.setName(registrationUserDto.getUsername());
+        customer.setEmail(registrationUserDto.getEmail());
+
+        return customerRepository.save(customer);
     }
 
 }
